welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:8: error: not found: value &&
  else if (b >= 13) && (b <= 19){
                    ^countTeen:11: error: not found: value &&
  else if (c >= 13) && (c <= 19){
                    ^countTeen:14: error: not found: value &&
  else if (d >= 13) && (d <= 19){
                    ^